# rh-summit-demos

./: .gitignore  Dockerfile  README.md  generate_report.py  makefile  pyproject.toml  requirements.txt  run_garak.py
data/: flow.yaml  garak.yaml  garak_multiclass.yaml  prompt_template.yaml
notebooks/: 01-red-team-prompt-generation.ipynb  02-garak-to-sdg.ipynb  02-sdg-to-garak.ipynb  03-run-garak.ipynb  04-generate-report.ipynb  garak-to-sdg.ipynb  generate-report.ipynb  prompt-generation-financial.ipynb  red-team-prompt-generation.ipynb  run-garak.ipynb
pipelines/: red_team_pipeline.py
tools/: build_explorer.py  explorer_template.html
