[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rh-summit-demos"
version = "0.1.0"
description = "Technical demos for Red Hat Summit - AI/ML and Data Science"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "sdg-hub @ git+https://github.com/Red-Hat-AI-Innovation-Team/sdg_hub.git@feat/redteam-promptgen"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["demos"]
